objects/TrainingProgress__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainings__c</fullName>
        <label>TrainingandMemberships</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Progress</relationshipLabel>
        <relationshipName>Progress</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>